# OptiCore

./: CMakeLists.txt  README.md  all_project_code.txt
Audio/: audio_optimizer.cpp  audio_optimizer.h
CPU/aurora_integration/: aurora_xpm.c
CPU/loader/: main.c  start.S
CPU/lowlevel/: powerpc_utils.c
CPU/memory/: mmu_manager.c
CPU/microkernel/: task_scheduler.c
CPU/profiler/: load_predictor.c  load_predictor.h  performance_monitor.c
CPU/simd/: simd_operations.c
IO/: io_optimizer.cpp  io_optimizer.h
Memory/: hugepages_manager.c  hugepages_manager.h  prefetch_manager.c  prefetch_manager.h  swap_manager.c  swap_manager.h
Power/: power_manager.cpp  power_manager.h
SouthBridgeX/sboptimizer/: aurora_plugin.cpp  eeprom_proxy.cpp  hook_table.cpp  main.cpp  sb_control.cpp  sb_monitor.cpp  sboptimizer.def  smc_patch.cpp  usb_throttle.cpp
UI/OptiCorePanel/: OptiCorePanel.cpp  OptiCorePanel.h
Video/GPUOptimizer/: build_instructions.txt
Video/GPUOptimizer/include/: BatchProcessor.h  CommandQueue.h  GPUCommand.h  GPUManagerImpl.h  GPUStatus.h  IBatchProcessor.h  ICommandOptimizer.h  ICommandQueue.h  ICoreEmulator.h  IGPUManager.h  IMemoryExtender.h  IProfiler.h  IPseudoGPU.h  IResourceMonitor.h  IStatisticsManager.h  IThreadPool.h  ThreadPool.h  aurora_integration.h  command_optimizer.h  config_manager.h  hook_gpu_buffer.h  hud_overlay.h  optimization_utils.h  statistics_manager.h  system_utils.h  wavelet_compressor.h
Video/GPUOptimizer/src/: aurora_integration.cpp  batch_processor.cpp  command_optimizer.cpp  command_queue.cpp  config_manager.cpp  core_emulator.cpp  entry_point.cpp  gpu_manager.cpp  hook_gpu_buffer.cpp  hud_overlay.cpp  main.cpp  memory_extender.cpp  optimization_utils.cpp  pseudo_gpu.cpp  statistics_manager.cpp  system_utils.cpp  thread_pool.cpp  wavelet_compressor.cpp
adapters/linux/: platform_adapter_linux.cpp  platform_adapter_linux.h
plugins/: analytics.cpp  analytics.h  audio_optimizer.cpp  audio_optimizer.h  cpu_optimizer.cpp  cpu_optimizer.h  gpu_optimizer.cpp  gpu_optimizer.h  memory_optimizer.cpp  memory_optimizer.h  monitor.cpp  monitor.h
pseudo_core_tech/: pseudo_core.c
pseudo_core_tech/pseudo_core_tech/: all_code.txt
